--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -93,9 +93,9 @@
     <!-- Nav Item - Charts -->
     
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
+        <a class="nav-link" href="/cms/order">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Order</span></a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/cms/foods">
