--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,33 @@
 
   <!-- Theme Style -->
   <link rel="stylesheet" href="css/style.css">
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+<script>
+  $(document).ready(function(){
+
+  $('form').submit(function() { 
+ 
+    
+    var that = $(this);
+    $.ajax({
+                 type: 'post',
+                  url: '/',
+                  data: that.serialize(),
+                  success: function (result) {
+                    console.log(result);
+                   $("#status").html(result)
+                   myVar = setTimeout(function name(params) {
+                    $("#status").html("");
+
+                   }, 3000);
+
+                  }
+          });
+    return false;
+});
+});
+</script>
 </head>
 
 <body class="bg-light">
@@ -38,7 +64,6 @@
 <%- include("function/navbar.ejs") %>
 
 
-      
       <div class="main-wrap " id="section-danhsachdoanchuanbixong">
 
         <div class="cover_1 overlay bg-light">
@@ -67,6 +92,7 @@
           <div class="row section-heading justify-content-center mb-5">
             <div class="col-md-8 text-center">
               <h2 class="heading mb-3" id="section-menu">Thực đơn ngày hôm nay</h2>
+
             </div>
           </div>
           <div class="row justify-content-center">
@@ -104,14 +130,14 @@
                                    
                                 </div>
                                 <div class="row d-flex align-items-end justify-content-end mt-2 ">
-                                  <form id="themvaogiohang" method="post" action="/">
+                                  <form >
                                     <label>
                                         <%= element.price %> vnđ
                                     </label>
                                     <input class="amount" type="number" class="form-control" name='amount'
                                         style="width: 100px;"  min='1' max='<%= element.amount %>' >
                                         <input type="hidden" name="idfood" value="<%= element.foodID %> ">
-                                        <button type="submit" class="btn-primary btn">Thêm vào giỏ hàng</button>
+                                        <input type="submit" class="btn-primary btn" value="Thêm vào giỏ hàng" >
                                       </form>
                                 </div>
                             </div>
@@ -129,11 +155,11 @@
       </div> <!-- .section -->
       
 
-
+      <button type="submit">Test</button>
 
       <%- include("function/footer.ejs") %>
 <script>
-  
+  //id="myform" action="/themvaogiohang" method="post" 
 </script>
   </body>
 
