--- a/views/cms/main_layout.ejs
+++ b/views/cms/main_layout.ejs
@@ -17,6 +17,9 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <!-- Custom styles for this page -->
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
+
 </head>
 
 <body id="page-top">
