--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,9 @@
 
 <script>
   $(document).ready(function(){
-
+    $('#test').submit(function(){
+      document.getElementById('#amount').value = '';
+    })
   $('form').submit(function() { 
  
     
@@ -40,9 +42,10 @@
                   url: '/',
                   data: that.serialize(),
                   success: function (result) {
-                    console.log(result);
-                   $("#status").html(result)
+                   $("#status").html(result);
+                   document.getElementsByName('amount').value = '';
                    myVar = setTimeout(function name(params) {
+                     
                     $("#status").html("");
 
                    }, 3000);
@@ -134,7 +137,7 @@
                                     <label>
                                         <%= element.price %> vnđ
                                     </label>
-                                    <input class="amount" type="number" class="form-control" name='amount'
+                                    <input class="amount"  type="number" class="form-control" name='amount'
                                         style="width: 100px;"  min='1' max='<%= element.amount %>' >
                                         <input type="hidden" name="idfood" value="<%= element.foodID %> ">
                                         <input type="submit" class="btn-primary btn" value="Thêm vào giỏ hàng" >
@@ -155,7 +158,7 @@
       </div> <!-- .section -->
       
 
-      <button type="submit">Test</button>
+      <button id="test" type="submit">Test</button>
 
       <%- include("function/footer.ejs") %>
 <script>
