--- a/views/cms/sidebar.ejs
+++ b/views/cms/sidebar.ejs
@@ -92,11 +92,7 @@
 
     <!-- Nav Item - Charts -->
     
-    <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
-    </li>
+   
     <li class="nav-item">
         <a class="nav-link" href="/cms/foods">
             <i class="fas fa-fw fa-table"></i>
@@ -122,6 +118,11 @@
         <a class="nav-link" href="/cms/baotri">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Bảo trì</span></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/cms/quanlynguoidung">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Quản lý</span></a>
     </li>
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
