--- a/views/dangnhap.ejs
+++ b/views/dangnhap.ejs
@@ -47,7 +47,8 @@
           <div class="container">
             <div class="row align-items-center justify-content-center">
               <div class="col-md-12 col-lg-8 section-heading">
-                <h1 class="card-title text-center"><%= status %></h1>
+                <h1 class="card-title text-center" style="color: red;"><%= status %></h1>
+               <br>
 
                 <!-- Form start -->
                 <form class="form-signin" method="POST" action="/xacthucdangnhap">
