--- a/views/function/navbar.ejs
+++ b/views/function/navbar.ejs
@@ -33,6 +33,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Xin chào <%- name %></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/xacnhan">Xác nhận</a>
+      </li>
       <% } %>
       <% if (role == 'admin'){ %>
       <li class="nav-item">
