--- a/views/function/js/noti.ejs
+++ b/views/function/js/noti.ejs
@@ -1,12 +1,12 @@
-
 <style>
-    #wrap_noti{
+    #wrap_noti {
         position: absolute;
         top: 5px;
         right: 5px;
         z-index: 1000;
     }
-    .card_noti{
+
+    .card_noti {
         position: absolute;
         top: 30px;
         right: 0px;
@@ -18,14 +18,16 @@
 </style>
 <template id="template_noti">
     <div id="wrap_noti">
-        <div class="card_noti">
-            <div class="noti-head">
-                <h5>Thông báo</h5>
+        <a href="/xacnhanorder">
+            <div class="card_noti">
+                <div class="noti-head" style="padding: 4px; border-radius: 6px; background: gray;">
+                    <h5>Thông báo</h5>
+                </div>
+                <div class="noti-body">
+
+                </div>
             </div>
-            <div class="noti-body">
-                
-            </div>
-        </div>
+        </a>
     </div>
 </template>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
@@ -36,11 +38,23 @@
     socket.on('food ready', (data) => {
         var template = document.getElementById('template_noti');
         var noti = template.content.cloneNode(true);
-        $(noti.querySelector('.noti-body')).text(data);
+        $(noti.querySelector('a')).attr('href', "/xacnhanorder?idgiohang="+data.idgiohang);
+        $(noti.querySelector('.noti-body')).text(data.noti_content);
         document.body.appendChild(noti);
-        setTimeout(()=>{
+        var timeout = setTimeout(() => {
             $("#wrap_noti").remove();
             console.log('remove');
         }, 3000);
+        $("#wrap_noti").hover(function () {
+            // over
+            clearTimeout(timeout);
+        }, function () {
+            // out
+            timeout = setTimeout(() => {
+                $("#wrap_noti").remove();
+                console.log('remove');
+            }, 3000);
+        }
+        );
     })
 </script>
